--- a/src/client/styles/App.css
+++ b/src/client/styles/App.css
@@ -2,15 +2,9 @@
 *{
   box-sizing: border-box;
 }
-html, body{
-  height : 100%;
-}
-body {
+html, body {
   margin: 0;
-  font-size: 16px;
   font-family: 'Source Sans Pro', sans-serif;
-  height : 100%;
-}
-#app {
-  height : 100%;
+  padding: 0;
+  background: #f5f5f5;
 }
