--- a/src/server/templates/index.prod.pug
+++ b/src/server/templates/index.prod.pug
@@ -2,14 +2,16 @@ doctype html
 html
     head
         meta(charset="utf-8")
+        meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui")
         title Summer
         link(rel="shortcut icon", type="image/png", href="/logo.png")
         link(rel="shortcut icon", type="image/png", href="/favicon.png")
         if assets.client.css
             link(rel="stylesheet", href=`${assets.client.css}`)
-        != styles
+        style
+            != styles
     body
         #app!=markup
         script(src=`${assets.client.js}`, defer=true)
-        scripts
+        script
             != state
