--- a/src/client/styles/App.css
+++ b/src/client/styles/App.css
@@ -1,4 +1,5 @@
- @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+ @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400');
+ /*@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');*/
 *{
   box-sizing: border-box;
 }
